--- a/_posts/2021-02-14-daskhub.md
+++ b/_posts/2021-02-14-daskhub.md
@@ -100,7 +100,7 @@ helm upgrade --wait --install --render-subchart-notes \
     --values=secrets.yaml
 ```
 
-The code I used
+The code I use to start a cluster and use it in notebooks:
 
 ```python
 from dask_gateway import GatewayCluster
