--- a/_posts/2021-02-14-daskhub.md
+++ b/_posts/2021-02-14-daskhub.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Setting up a scalable dask Jupyterhub (cargo-cult edition, as of 20210214)"
+title:  "Setting up a scalable dask Jupyterhub (cargo-cult edition, as of ~~20210214~~, 20210215)"
 date:   2021-02-14-daskhub
 ---
 
@@ -15,6 +15,9 @@ jupyterhub:
   singleuser:
     extraEnv:
       DASK_GATEWAY__CLUSTER__OPTIONS__IMAGE: '{JUPYTER_IMAGE_SPEC}'
+      DASK_DISTRIBUTED__DASHBOARD_LINK: '/user/{JUPYTERHUB_USER}/proxy/{port}/status'
+      DASK_LABEXTENSION__FACTORY__MODULE: 'dask_gateway'
+      DASK_LABEXTENSION__FACTORY__CLASS: 'GatewayCluster'
     image:
       name: ghcr.io/nrdg/autofq-daskhub
       tag: 0546ce5f054b
@@ -27,13 +30,6 @@ jupyterhub:
 
     readinessProbe:
       enabled: false
-
-    extraEnv:
-        # The default worker image matches the singleuser image.
-        DASK_GATEWAY__CLUSTER__OPTIONS__IMAGE: '{JUPYTER_IMAGE_SPEC}'
-        DASK_DISTRIBUTED__DASHBOARD_LINK: '/user/{JUPYTERHUB_USER}/proxy/{port}/status'
-        DASK_LABEXTENSION__FACTORY__MODULE: 'dask_gateway'
-        DASK_LABEXTENSION__FACTORY__CLASS: 'GatewayCluster'
     services:
       dask-gateway:
         apiToken: "xxx"
@@ -111,10 +107,13 @@ client = gateway.get_client()
 
 Things I still need to sort out:
 
-1. [This issue](https://github.com/dask/helm-chart/issues/131) is still happening with this configuration. That is, using the dask labextension currently doesn't work (and could confuse users, as it launches a `LocalCluster`). I can still get a view on the work that the cluster is doing by clicking on the provided dashboard link.
+1. ~~[This issue](https://github.com/dask/helm-chart/issues/131) is still happening with this configuration. That is, using the dask labextension currently doesn't work (and could confuse users, as it launches a `LocalCluster`). I can still get a view on the work that the cluster is doing by clicking on the provided dashboard link.~~
 2. The initialization of the `GatewayCluster` class instance is still a bit flaky. It looks like maybe it takes a while for the `dask-scheduler` pod to get started on a cold cluster, so I sometimes need to repeat this step a couple of times, before it works.
 3. My current configuration has 2GB RAM per worker. That might be a little low for the kinds of things we'd like to do with this.
 4. It would be great to automate everything, so that changes to configuration immediately trigger an update to the hub. Right now, I have to make a PR for the docker image to build (at least that's automated!), then merge the PR and wait for it to build, copy the hash of the new version of the image into my `secrets.yaml` file and run the upgrade on my laptop. I know it's possible to have the CI/CD do all of this, but I would still need to piece it together. I realize that this will save more time in the long run. Sigh.
 
 
 Finally, something a bit more meta. All this made me think of conversations that I was recently part of where people said things like "we are scientists, not cloud engineers!", suggesting that large research collaborations should rely (exclusively?) on non-scientists with specialized knowledge to design, implement and maintain systems like this. I'd like to push against that notion just a bit. It's true that I am relying on Erik and others with the specialized expertise as a starting point for this work, but I think that understanding how these systems and technologies work a bit better is relevant to scientific knowledge creation in many fields where this technology is going to be used. Just like I believe software engineering is. Or math. This doesn't neccesarily mean that we should drop everything and just focus on cloud engineering issues, but we should try to make sure that it has a place within our work. For me personally, one of my main learning points from all this was to more effectively use `kubectl describe pod` to debug issues that come up and try to interpret events that happened that caused issues to arise. There's definitely more to learn.
+
+
+**EDIT**: After first writing this post, I figured out some things that were originally wrong, so I fixed them in the config file that I posted here. I also discovered (maybe that shouldn't have been a surprise?) that some issues that come up can be "fixed" by turning the damn thing off and then on again. In this case, I ran into some really puzzling behaviors with dask schedulers dying on me left and right, leaving me unable to run anything on the cluster (basically a persistent form of issue 2 above). Power cycling the Azure VMs seems to have resolved that issue.
