--- a/_posts/2021-02-14-daskhub.md
+++ b/_posts/2021-02-14-daskhub.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Setting up a scalable dask Jupyterhub (cargo-cult edition, as of ~~20210214~~, 20210215)"
+title:  "Setting up a scalable dask Jupyterhub (cargo-cult edition, as of <strike>20210214</strike>, 20210215)"
 date:   2021-02-14-daskhub
 ---
 
