Just put the date on the edit.

--- a/_posts/2021-02-14-daskhub.md
+++ b/_posts/2021-02-14-daskhub.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Setting up a scalable dask Jupyterhub (cargo-cult edition, as of <strike>20210214</strike>, 20210215)"
+title:  "Setting up a scalable dask Jupyterhub (cargo-cult edition, as of 20210214)"
 date:   2021-02-14-daskhub
 ---
 
@@ -116,4 +116,4 @@ Things I still need to sort out:
 Finally, something a bit more meta. All this made me think of conversations that I was recently part of where people said things like "we are scientists, not cloud engineers!", suggesting that large research collaborations should rely (exclusively?) on non-scientists with specialized knowledge to design, implement and maintain systems like this. I'd like to push against that notion just a bit. It's true that I am relying on Erik and others with the specialized expertise as a starting point for this work, but I think that understanding how these systems and technologies work a bit better is relevant to scientific knowledge creation in many fields where this technology is going to be used. Just like I believe software engineering is. Or math. This doesn't neccesarily mean that we should drop everything and just focus on cloud engineering issues, but we should try to make sure that it has a place within our work. For me personally, one of my main learning points from all this was to more effectively use `kubectl describe pod` to debug issues that come up and try to interpret events that happened that caused issues to arise. There's definitely more to learn.
 
 
-**EDIT**: After first writing this post, I figured out some things that were originally wrong, so I fixed them in the config file that I posted here. I also discovered (maybe that shouldn't have been a surprise?) that some issues that come up can be "fixed" by turning the damn thing off and then on again. In this case, I ran into some really puzzling behaviors with dask schedulers dying on me left and right, leaving me unable to run anything on the cluster (basically a persistent form of issue 2 above). Power cycling the Azure VMs seems to have resolved that issue.
+**EDIT (20210215)**: After first writing this post, I figured out some things that were originally wrong, so I fixed them in the config file that I posted here. I also discovered (maybe that shouldn't have been a surprise?) that some issues that come up can be "fixed" by turning the damn thing off and then on again. In this case, I ran into some really puzzling behaviors with dask schedulers dying on me left and right, leaving me unable to run anything on the cluster (basically a persistent form of issue 2 above). Power cycling the Azure VMs seems to have resolved that issue.
