Adds a new post (first in a long time...).

--- a/_posts/2021-02-14-daskhub.md
+++ b/_posts/2021-02-14-daskhub.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Setting up a scalable dask Jupyterhub (cargo-cult edition, as of 20210214)"
-date:   2021-02-14-daskhub
+date:   2021-02-14
 ---
 
 Setting up a flexibly-configured Dask-powered Jupyterhub for the [DIRECT](https://autofq.org) research group has been a goal of mine for a while. Back in 2019, I did some [experiments](https://github.com/nrdg/hcp-pangeo-experiments) that demonstrated that we could use Dask as a really effective way to scale some of the computations that we do with neuroimaging data. These experiments were done on a Jupyterhub that I set up on AWS using a set of snakemake scripts that I got from Scott Henderson, who had originally created these as part of his work with the [Pangeo project](https://pangeo.io/). These worked well after only some minimal tweaking, but it turned out that there were issues with this setup, and we had to take down our Jupyterhub. I got distracted by other things and left that aside. Over the time that has passed since, I also worked with Erik Sundell, on another hub I had set up for another project (described [here](https://arokem.github.io/2019-BRAINI-PanNeuro-slides/#/)). I had originally set up this hub on GCP, but due to changing needs of the project, and some administrative quirks that I will not go into, we decided to move our hub to AWS. When we did that, Erik moved our configuration from the one that I had originally designed, that fairly closely matched the Pangeo configuration as of early 2019, to one that is much more generic and more flexible (but as you'll see, still leans heavily on pangeo). Recently, we got some [cloud credits from Azure](https://escience.washington.edu/azure-cloud-credits-available/) for our DIRECT work, which gave me the opportunity and impetus to try this again. Over the time that had passed between me setting up the GCP hub and the move to AWS, another thing that happened is that work on Pangeo and other work on Dask had given rise to the very useful [`daskhub` helm chart](https://github.com/dask/helm-chart/tree/main/daskhub) that can now be (in principle) used to deploy these hubs and configure them.
